--- a/.gitignore
+++ b/.gitignore
@@ -246,4 +246,7 @@ $RECYCLE.BIN/
 
 */build/*
 
+# IaC
+*terraform.tfstate*
+.terraform*
 # End of https://www.gitignore.io/api/osx,linux,python,windows,pycharm,visualstudiocode
