--- a/.github/workflows/ci_cd_workflow.yaml
+++ b/.github/workflows/ci_cd_workflow.yaml
@@ -7,12 +7,10 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     # strategy:
     #   matrix:
     #     python-version: [3.6, 3.7, 3.8, 3.9]
-
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
@@ -27,6 +25,7 @@ jobs:
         run: |
           coverage run -m pytest tests/unit/
           coverage report -m
+          exit 1
         env:
           ENVIRONMENT: ${{ secrets.ENVIRONMENT }}
           DB_HOST: ${{ secrets.DB_HOST }}
@@ -35,6 +34,7 @@ jobs:
           DB_NAME: ${{ secrets.DB_NAME }}
           SIGNATURE: ${{ secrets.SIGNATURE }}
           API_TOKEN: ${{ secrets.API_TOKEN }}
+          SLACK_WEBHOOK: ${{ secrets.TEST_WEBHOOK }}
       - name: Slack Notification
         uses: rtCamp/action-slack-notify@v2
         env:
