--- a/.github/workflows/ci_cd_workflow.yaml
+++ b/.github/workflows/ci_cd_workflow.yaml
@@ -22,11 +22,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r ./tests/requirements.txt
       - name: Test with pytest
-
         run: |
           coverage run -m pytest tests/unit/
           coverage report -m
           exit 1
+        uses: rtCamp/action-slack-notify@v2
         env:
           ENVIRONMENT: ${{ secrets.ENVIRONMENT }}
           DB_HOST: ${{ secrets.DB_HOST }}
@@ -35,7 +35,6 @@ jobs:
           DB_NAME: ${{ secrets.DB_NAME }}
           SIGNATURE: ${{ secrets.SIGNATURE }}
           API_TOKEN: ${{ secrets.API_TOKEN }}
-          SLACK_WEBHOOK: ${{ secrets.TEST_WEBHOOK }}
       - name: Slack Notification
         if: ${{ failure() }}
         uses: rtCamp/action-slack-notify@v2
