--- a/.github/workflows/ci_cd_workflow.yaml
+++ b/.github/workflows/ci_cd_workflow.yaml
@@ -6,7 +6,7 @@ on:
       - final-demo
 
 jobs:
-  build:
+  Unittest:
     runs-on: ubuntu-latest
     # strategy:
     #   matrix:
@@ -38,6 +38,9 @@ jobs:
         if: ${{ failure() }}
         uses: rtCamp/action-slack-notify@v2
         env:
-          SLACK_WEBHOOK: ${{ secrets.TEST_WEBHOOK }}
-          SLALCK_COLOR: '#ff0000'
+          SLACK_TITLE: Unittests have failed
           SLACK_USERNAME: "Bootcamp Project Pipeline"
+          SLALCK_COLOR: 'failure'
+          SLACK_MESSAGE: 'Branch is unhealthy, check test results'
+          SLACK_WEBHOOK: ${{ secrets.TEST_WEBHOOK }}
+          
