--- a/.github/workflows/ci_cd_workflow.yaml
+++ b/.github/workflows/ci_cd_workflow.yaml
@@ -40,7 +40,7 @@ jobs:
         env:
           SLACK_TITLE: Unittests have failed
           SLACK_USERNAME: "Bootcamp Project Pipeline"
-          SLALCK_COLOR: 'failure'
+          SLALCK_COLOR: 'danger'
           SLACK_MESSAGE: 'Branch is unhealthy, check test results'
           SLACK_WEBHOOK: ${{ secrets.TEST_WEBHOOK }}
           
