--- a/.github/workflows/ci_cd_workflow.yaml
+++ b/.github/workflows/ci_cd_workflow.yaml
@@ -44,6 +44,7 @@ jobs:
           SLACK_WEBHOOK: ${{ secrets.TEST_WEBHOOK }}
   
   TERRAFORM:
+    needs: [Unittests]
     name: 'Terraform'
     runs-on: ubuntu-latest
     
@@ -51,14 +52,14 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
     
-    - name: Install Terraform
-      env:
-            TERRAFORM_VERSION: "1.0.9"
-      run: |
-        tf_version=$TERRAFORM_VERSION
-        wget https://releases.hashicorp.com/terraform/"$tf_version"/terraform_"$tf_version"_linux_amd64.zip
-        unzip terraform_"$tf_version"_linux_amd64.zip
-        sudo mv terraform /usr/local/bin/
+    # - name: Install Terraform
+    #   env:
+    #         TERRAFORM_VERSION: "1.0.9"
+    #   run: |
+    #     tf_version=$TERRAFORM_VERSION
+    #     wget https://releases.hashicorp.com/terraform/"$tf_version"/terraform_"$tf_version"_linux_amd64.zip
+    #     unzip terraform_"$tf_version"_linux_amd64.zip
+    #     sudo mv terraform /usr/local/bin/
     
     - name: Verify Terraform version
       run: terraform --version
