--- a/.github/workflows/ci_cd_workflow.yaml
+++ b/.github/workflows/ci_cd_workflow.yaml
@@ -43,7 +43,7 @@ jobs:
           SLACK_MESSAGE: 'Branch is unhealthy, check test results'
           SLACK_WEBHOOK: ${{ secrets.TEST_WEBHOOK }}
   
-  TERRAFORM:
+  Terraform:
     needs: [Unittests]
     name: 'Terraform'
     runs-on: ubuntu-latest
@@ -52,15 +52,6 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
     
-    # - name: Install Terraform
-    #   env:
-    #         TERRAFORM_VERSION: "1.0.9"
-    #   run: |
-    #     tf_version=$TERRAFORM_VERSION
-    #     wget https://releases.hashicorp.com/terraform/"$tf_version"/terraform_"$tf_version"_linux_amd64.zip
-    #     unzip terraform_"$tf_version"_linux_amd64.zip
-    #     sudo mv terraform /usr/local/bin/
-    
     - name: Verify Terraform version
       run: terraform --version
 
@@ -68,7 +59,11 @@ jobs:
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run: terraform init -input=false
+      run: 
+        |
+        cd terraform/
+        ls -l
+        terraform init -input=false
 
     - name: Terraform validation
       run: terraform validate
