--- a/.github/workflows/ci_cd_workflow.yaml
+++ b/.github/workflows/ci_cd_workflow.yaml
@@ -73,3 +73,8 @@ jobs:
         cd terraform/
         terraform validate
         terraform plan
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        BACKEND_BUCKET: ${{ secrets.BACKEND_BUCKET }}
+        REGION: ${{ secrets.REGION }}
