--- a/.github/workflows/ci_cd_workflow.yaml
+++ b/.github/workflows/ci_cd_workflow.yaml
@@ -69,6 +69,18 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         BACKEND_BUCKET: ${{ secrets.BACKEND_BUCKET }}
         REGION: ${{ secrets.REGION }}
+    
+    - name: Pack dependencies
+      run:
+        |
+        mkdir -p libs/python
+        pip install -r requirements.txt -t libs/python
+        aws s3 cp s3://$DEPS_LAYER_BUCKET/cert/us-east-2-bundle.pem lib/python/
+        zip -u deps.zip lib/python
+      env:
+        DEPS_LAYER_BUCKET: ${{ secrets.DEPS_LAYER_BUCKET}}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   
   FailureNotification:
     needs: [Unittests, Terraform]
