fixed command to zip dependencies

--- a/.github/workflows/ci_cd_workflow.yaml
+++ b/.github/workflows/ci_cd_workflow.yaml
@@ -83,7 +83,7 @@ jobs:
         mkdir -p libs/python
         pip install -r requirements.txt -t libs/python
         aws s3 cp s3://$DEPS_LAYER_BUCKET/cert/us-east-2-bundle.pem lib/python/
-        zip -u deps.zip lib/python
+        zip -r -u deps.zip lib/
         aws s3 cp deps.zip s3://$DEPS_LAYER_BUCKET/
       env:
         DEPS_LAYER_BUCKET: ${{ secrets.DEPS_LAYER_BUCKET}}
