--- a/.github/workflows/ci_cd_workflow.yaml
+++ b/.github/workflows/ci_cd_workflow.yaml
@@ -57,7 +57,7 @@ jobs:
         cd terraform/
         ls -l
         terraform init -input=false
-
+        
     - name: Terraform validation and plan
       run: 
         |
@@ -69,6 +69,8 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         BACKEND_BUCKET: ${{ secrets.BACKEND_BUCKET }}
         REGION: ${{ secrets.REGION }}
+        TF_VAR_db_master_user: ${{ secrets.DB_MASTER_USER }}
+        TF_VAR_db_master_pass: ${{ secrets.DB_MASTER_PASS }}
 
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
