--- a/.gitignore
+++ b/.gitignore
@@ -251,4 +251,5 @@ $RECYCLE.BIN/
 .terraform*
 *.zip
 terraform.tfvars
+*/builds/*
 # End of https://www.gitignore.io/api/osx,linux,python,windows,pycharm,visualstudiocode
