--- a/.github/workflows/ci_cd_workflow.yaml
+++ b/.github/workflows/ci_cd_workflow.yaml
@@ -87,6 +87,7 @@ jobs:
           cd terraform/
           terraform validate
           terraform plan
+          terraform appy --auto-aprove
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -94,6 +95,16 @@ jobs:
           REGION: ${{ secrets.REGION }}
           TF_VAR_db_master_user: ${{ secrets.DB_MASTER_USER }}
           TF_VAR_db_master_pass: ${{ secrets.DB_MASTER_PASS }}
+      
+      - name: Initial data
+        run: 
+          |
+          aws lambda invoke --function-name db-init-load out --log-type Tail \
+            --query 'LogResult' --output text |  base64 -d
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
 
   FailureNotification:
     needs: [Unittests, Terraform]
@@ -107,4 +118,15 @@ jobs:
           SLACK_USERNAME: "Bootcamp Project Pipeline"
           SLACK_COLOR: "danger"
           SLACK_MESSAGE: "An error has occurred, check action output for details"
+          SLACK_WEBHOOK: ${{ secrets.TEST_WEBHOOK }}
+  
+  SuccessNotification:
+    needs: [Unittests, Terraform]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Slack Notification
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_TITLE: CI/CD workflow completed successfully
+          SLACK_USERNAME: "Bootcamp Project Pipeline"
           SLACK_WEBHOOK: ${{ secrets.TEST_WEBHOOK }}
