--- a/.github/workflows/ci_cd_workflow.yaml
+++ b/.github/workflows/ci_cd_workflow.yaml
@@ -119,6 +119,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r ./tests/integration/requirements.txt
+      - name: Run terraform init
+        run: |
+          cd terraform
+          terraform init
       - name: Test with pytest
         run: |
           cd terraform && export API_URL=$(terraform output devStageApiUrl)
